--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,10 @@
-* {
-    margin: 0;
-    height: 100%;
-    width: 100%;
+html, body {
     margin: 0;
     padding: 0;
+    height: 100%;
+    width: 100%;
 }
+
 
 a {
     text-decoration: none;
@@ -12,9 +12,10 @@ a {
 }
 
 .container {
+    height: 100%;
     display: grid;
-    grid-template-rows: 0.4fr 1.6fr;
-    grid-template-columns: 0.35fr 1.75fr;
+    grid-template-rows: 0.15fr 1.85fr;
+    grid-template-columns: 0.35fr 1.65fr;
     grid-template-areas:
     'sidebar header'
     'sidebar main'
@@ -22,39 +23,127 @@ a {
 }
 
 #sidebar {
+    grid-area: sidebar;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    grid-area: sidebar;
-    font-size: 32px;
+    font-size: 22px;
     height: auto;
-    padding: 0 0 10px 20px;
-    background-color: red;
+    padding: 10px 10px 20px 40px;
+    background-color: #090909;
+    overflow: scroll;
 }
 
-#sidebar-title {
+.sidebar-title {
     display: flex;
-    margin: 25px 0 25px 0;
-    height: auto;
+    justify-content: center;
+    align-items: center;
+    gap: 15px;
+    color: white;
+    font-size: 30px;
+    font-weight: 700;
+    margin: 5px 60px 30px 0;
 }
+
+.sidebar-logo {
+    height: 60px;
+    width: 60px;
+}
+
+.sidebar-link{
+    display: flex;
+    align-items: center;
+    gap: 35px;
+    padding-left: 8px;
+    color: white;
+}
+
+.sidebar-link:hover {
+    cursor: pointer;
+}
+
+.sidebar-icon {
+    height: 35px;
+    width: 35px;
+}
+
 
 #sidebar > ul {
-    height: auto;
     display: flex;
     flex-direction: column;
-    gap: 10px;
     list-style-type: none;
     padding: 0;
 }
 
+/* #header > * {
+    border: 1px solid red;
+} */
+
 #header {
     grid-area: header;
-    background-color: blue;
+    display: grid;
+    grid-template-columns: 0.8fr 9.5fr 0.3fr 0.5fr;
+    align-items: center;
+    background-color: #121212;
+    padding: 20px;
+}
+
+.header-icon{
+    height: 25px;
+    width: 25px;
+}
+
+.header-profile-icon {
+    height: 40px;
+    width: 40px;
+    border-radius: 50%;
+}
+
+.header-add-button{
+    display: flex;
+    align-items: center;
+    height: 20px;
+    width: 50px;    
+    border: 1px solid white;
+    border-radius: 5px;
+    padding: 5px;
+}
+
+.header-searchbar-container {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    padding: 5px;
+    border: 1px solid white;
+    border-radius: 20px;
+    width: max(30%, 300px);
+}
+
+.header-searchbar {
+    background-color: transparent;
+    border: none;
+    color: white;
+    font-size: 16px;
+    width: 100%;
+}
+
+.header-searchbar:focus {
+    outline: none;
+}
+
+.header-profile-icon-container{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.header-profile-icon-container:hover {
+    cursor: pointer;
 }
 
 #main-content {    
     grid-area: main;
-    background-color: green;
+    background-color: #1D1D1D;
 }
 
 .roboto-regular {
