--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,7 @@ a {
     height: 100%;
     display: grid;
     grid-template-rows: 0.15fr 1.85fr;
-    grid-template-columns: 0.35fr 1.65fr;
+    grid-template-columns: 0.3fr 1.7fr;
     grid-template-areas:
     'sidebar header'
     'sidebar main'
@@ -27,9 +27,9 @@ a {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    font-size: 22px;
+    font-size: 20px;
     height: auto;
-    padding: 10px 10px 20px 40px;
+    padding: 0px 10px 20px 20px;
     background-color: #090909;
     overflow: scroll;
 }
@@ -42,7 +42,7 @@ a {
     color: white;
     font-size: 30px;
     font-weight: 700;
-    margin: 5px 60px 30px 0;
+    margin: 0px 50px 20px 10px;
 }
 
 .sidebar-logo {
@@ -75,9 +75,6 @@ a {
     padding: 0;
 }
 
-/* #header > * {
-    border: 1px solid red;
-} */
 
 #header {
     grid-area: header;
@@ -143,7 +140,98 @@ a {
 
 #main-content {    
     grid-area: main;
+    display: grid;
+    grid-template-columns: 8fr 2fr;
+    grid-template-rows: 1fr 1fr;
+    grid-template-areas:
+    'projects announcements'
+    'projects trending';
     background-color: #1D1D1D;
+    padding: 0px 20px 20px 20px;
+    color: white;
+    overflow: scroll;
+}
+
+.section-title {
+    font-size: 25px;
+    font-weight: 700;
+}
+
+.project-section {
+    display: flex;
+    flex-direction: column;
+    /* gap: 50px; */
+    grid-area: projects;
+    margin: 0px 40px 20px 10px;
+}
+
+.announcement-section {
+    grid-area: announcements;
+}
+
+.trending-section {
+    grid-area: trending;
+}
+
+.project-container {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
+    grid-auto-rows: minmax(300px, 1fr);
+    gap: 30px;
+}
+
+.project-card {
+    display: grid;
+    grid-template-rows: 0.2fr 1fr 0.1fr;    
+    padding: 0px 25px 25px 25px;
+    background-color: #121212;
+    border-left: 10px solid red;
+    border-radius: 10px;
+    color: white;
+    font-size: 18px;
+}
+
+.project-title {
+    font-size: 25px;
+    font-weight: 700;
+}
+
+.project-text {
+    text-align: justify;
+}
+
+.project-buttons {
+    display: flex;
+    justify-content: flex-end;
+    gap: 10px;
+}
+
+.project-buttons > img {
+    height: 25px;
+    width: 25px;
+}
+
+.announcement-container {
+    background-color: #121212;
+    padding: 10px 30px 10px 30px;
+    border-radius: 10px;
+}
+
+.announcement-card {
+   padding: 10px;
+}
+
+.announcement-card:nth-child(-n + 2){
+    border-bottom: 1px solid white;
+}
+
+.announcement-title {
+    font-size: 16px;
+    font-weight: 700;
+}
+.announcement-content {
+    font-size: 14px;
+    font-weight: 300;
 }
 
 .roboto-regular {
